--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="contact-info">
       <div class="info-item">
         <i class="fas fa-envelope"></i>
-        <a href="mailto:alba16@live.comm">info@albaconstrcution.com</a>
+        <a href="mailto:alba16@live.com">alba16@live.com"</a>
       </div>
       <div class="info-item">
         <i class="fas fa-phone"></i>
