--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alba Construction</title>
+
+  <!-- Site Verification (Google Search Console) -->
+  <meta name="google-site-verification" content="5LRGZQL9zoiPpvs_247ojxAMg_t_npCl0fC6ZY4z9ac" />
+
+  <!-- SEO Tags -->
+  <title>Alba Construction | Weymouth, MA</title>
+  <meta name="description" content="Alba Construction offers expert construction, renovation, painting, and handyman services across Weymouth and the South Shore. Over 30 years of trusted quality." />
+  <meta name="keywords" content="construction Weymouth, Alba Construction, home renovation, handyman services, South Shore, remodeling, painting services" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Alba Construction" />
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="Alba Construction | Building Your Vision with Precision" />
+  <meta property="og:description" content="Reliable, professional construction and renovation services in Weymouth and surrounding areas." />
+  <meta property="og:image" content="https://albaconstruction.github.io/AlbaConstruction/photos/IMG_8850.jpg" />
+  <meta property="og:url" content="https://albaconstruction.github.io/AlbaConstruction/" />
+  <meta property="og:type" content="website" />
+
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+  <!-- CSS & JavaScript -->
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
@@ -196,7 +218,7 @@
     <div class="contact-info">
       <div class="info-item">
         <i class="fas fa-envelope"></i>
-        <a href="mailto:alba16@live.com">alba16@live.com"</a>
+        <a href="mailto:alba16@live.com">alba16@live.com</a>
       </div>
       <div class="info-item">
         <i class="fas fa-phone"></i>
